<resources>
    <string name="app_name">ZuAnLanguage</string>
    <string name="GenarateFragment">GenarateFragment</string>
    <string name="DataFragment">DataFragment</string>
    <string name="MineFragment">MineFragment</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="ac">ac</string>
    <string name="meaning">meaning</string>
    <string name="AddLabel">InsertZuAnLanguage</string>
    <string name="when_delete_word">Delete completed!</string>
    <string name="copy_successful">Copy successful!</string>
    <string name="copy_fail">Copy fail!</string>
    <string name="isLiked">isLiked</string>
    <string name="genarate">Genarate</string>
    <string name="genarateFalse">No such data</string>
    <string name="loading">loading</string>
    <string name="empty">empty</string>
    <string name="doLike">Collecting done!</string>
    <string name="undoLike">Unlike done.</string>
</resources>