<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/GenarateFragment">

    <fragment
        android:id="@+id/GenarateFragment"
        android:name="com.example.zuanlanguage.fragment.GenarateFragment"
        android:label="@string/GenarateFragment"
        tools:layout="@layout/genarate_fragment" />
    <fragment
        android:id="@+id/DataFragment"
        android:name="com.example.zuanlanguage.fragment.DataFragment"
        android:label="@string/DataFragment"
        tools:layout="@layout/data_fragment">
        <action
            android:id="@+id/action_DataFragment_to_addFragment2"
            app:destination="@id/addFragment2" />
    </fragment>
    <fragment
        android:id="@+id/MineFragment"
        android:name="com.example.zuanlanguage.fragment.MineFragment"
        android:label="@string/MineFragment"
        tools:layout="@layout/mine_fragment" />
    <fragment
        android:id="@+id/addFragment2"
        android:name="com.example.zuanlanguage.fragment.AddFragment"
        android:label="@string/add"
        tools:layout="@layout/add_fragment" />
</navigation>